--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-gloo = { version = "0.11.0", features = ["events", "utils"] }
+gloo = { version = "0.11.0", features = ["events", "utils", "storage"] }
 web-sys = { version = "0.3.72", features = ["Navigator", "MediaQueryList", "Element", "DomTokenList", "Window", "MediaQueryListEvent"] }
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 wasm-bindgen = "0.2"
 js-sys = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+wasm-bindgen-futures = "0.4"
