--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "termstart"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 gloo = { version = "0.11.0", features = ["events", "utils", "storage"] }
 web-sys = { version = "0.3.72", features = ["Navigator", "MediaQueryList", "Element", "DomTokenList", "Window", "MediaQueryListEvent"] }
-yew = { version = "0.20", features = [ "csr" ]}
+yew = { version = "0.21", features = [ "csr" ]}
 wasm-bindgen = "0.2"
 js-sys = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 wasm-bindgen-futures = "0.4"
+lucide-yew = { version = "2.1.0", features = ["all-icons" ] }
