--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       - RUST_BACKTRACE=1
       - RUST_LOG=info
+      - RUSTUP_TOOLCHAIN=nightly
     command: trunk serve --address 0.0.0.0 --port 3000
 
   backend:
@@ -31,6 +32,7 @@ services:
       - RUST_BACKTRACE=1
       - RUST_LOG=debug
       - DATABASE_URL=postgres://postgres:postgres@db:5432/termstart
+      - RUSTUP_TOOLCHAIN=nightly
     depends_on:
       migrations:
         condition: service_completed_successfully
@@ -44,6 +46,7 @@ services:
       - ./backend:/app
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/termstart
+      - RUSTUP_TOOLCHAIN=nightly
     depends_on:
       db:
         condition: service_healthy
