--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,3 +17,4 @@ validator = { version = "0.16", features = ["derive"] }
 regex = "1.9"
 lazy_static = "1.4"
 actix-rt = "2.10.0"
+chrono = { version = "0.4", features = ["serde"] }
