--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ web-sys = { version = "0.3", features = [
     "Window",
 ] }
 gloo = { version = "0.10", features = ["storage", "net"] }
+gloo-storage = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 gloo-net = "0.5"
@@ -36,3 +37,7 @@ lazy_static = "1.4"
 dotenv = "0.15"
 wasm-logger = "0.2"
 serde-wasm-bindgen = "0.6"
+postgrest = "1.0"
+supabase_rs = "0.4.2"
+chrono = { version = "0.4", features = ["serde"] }
+url = "2.4.0"
