--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "bun --bun vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -25,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "fast-check": "^4.5.3",
     "globals": "^16.5.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^8.0.0-beta.13"
